Отредактировала заголовок страницы

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Седона - город для настоящих приключений</title>
+</head>
 
-  </body>
+<body>
+
+  <p>Учебный проект для практики перед этапом "Грейдирование"</p>
+
+</body>
+
 </html>
