Разметка главной страницы БЭМ, фавиконка

--- a/source/index.html
+++ b/source/index.html
@@ -1,16 +1,115 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Седона - главная страница</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
-<body>
+<body class="page__body">
+  <header class="header">
+    <a class="header__logo">
+      <!-- logo -->
+      <img src="https://www.placecage.com/102/84">
+    </a>
+    <nav class="header__navigation navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a class="navigation__link" href="index.html">Главная</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="catalog.html">Фото и видео</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="form.html">Форма отзыва</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">HTML Academy</a>
+        </li>
+      </ul>
+      <button class="navigation__close">Закрыть</button>
+    </nav>
+    <div class="header__intro">
+      <img class="header__slogan">
+    </div>
+  </header>
 
-  <p>Учебный проект - главная страница</p>
+  <main class="main">
+    <h1 class="visually-hidden">Информация о городе Седона, штат Аризона</h1>
+    <p class="main__description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+    <section class="advantages">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <ol class="advantages__list">
+        <li class="advantages__item">
+          <h3 class="advantages__title">Настоящий городок</h3>
+          <p class="advantages__number">№1</p>
+          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img class="advantages__photo" src="https://www.placecage.com/520/260"> <!-- Вставить фотку -->
+          <ul class="advantages__services services">
+            <li class="services__item">
+              <h4 class="services__title">Жилье</h4>
+              <p class="services__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__title">Сувениры</h4>
+              <p class="services__description">Не только китайского, но и местного производства!</p>
+            </li>
+            <li class="services__item">
+              <h4 class="services__title">Еда</h4>
+              <p class="services__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+          </ul>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Там есть мост дьявола</h3>
+          <p class="advantages__number">№2</p>
+          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img src="https://www.placecage.com/520/260"> <!-- Вставить фотку -->
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Небольшая площадь</h3>
+          <p class="advantages__number">№3</p>
+          <p class="advantages__description">Все интересные места находятся очень близко</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Красивая дорога</h3>
+          <p class="advantages__number">№4</p>
+          <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages__item">
+          <h3 class="advantages__title">Мало туристов</h3>
+          <p class="advantages__number">№5</p>
+          <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ol>
+    </section>
+    <section class="hotel-search">
+      <h2 class="visually-hidden">Поиск гостиницы</h2>
+      <p class="hotel-search__question">Заинтересовались?</p>
+      <p class="hotel-search__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+        Седоне</p>
+      <a class="hotel-search__link" href="#">Найти гостиницу</a>
+    </section>
+    <div class="main__map">
+      <!-- Карта, но возможно в другой секции -->
+    </div>
+  </main>
 
+  <footer class="footer">
+    <a class="footer__tag" href="#">#visitsedona</a>
+    <ul class="footer__social">
+      <li class="footer__item">Твиттер</li>
+      <li class="footer__item">Фейсбук</li>
+      <li class="footer__item">Ютуб</li>
+    </ul>
+    <p class="footer__copyright">Разработано</p>
+  </footer>
+  <!-- <section class="modal">
+    <h2 class="modal__heading">Бизнес-тарифы</h2>
+  </section> -->
 </body>
 
 </html>
