--- a/source/index.html
+++ b/source/index.html
@@ -101,11 +101,19 @@
   <footer class="footer">
     <a class="footer__tag" href="#">#visitsedona</a>
     <ul class="footer__social">
-      <li class="footer__item">Твиттер</li>
-      <li class="footer__item">Фейсбук</li>
-      <li class="footer__item">Ютуб</li>
+      <li class="footer__item">
+        <a>Твиттер</a>
+      </li>
+      <li class="footer__item">
+        <a>Фейсбук</a>
+      </li>
+      <li class="footer__item">
+        <a>Ютуб</a>
+      </li>
     </ul>
-    <p class="footer__copyright">Разработано</p>
+    <p class="footer__copyright">Разработано
+      <a href="#">лого академии</a>
+    </p>
   </footer>
   <!-- <section class="modal">
     <h2 class="modal__heading">Бизнес-тарифы</h2>
