--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Седона - каталог</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
-<body>
+<body class="page__body">
+  <header class="header">
+    <a class="header__logo">
+      <!-- logo -->
+      <img src="https://www.placecage.com/102/84">
+    </a>
+    <nav class="header__navigation navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a class="navigation__link" href="index.html">Главная</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="catalog.html">Фото и видео</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="form.html">Форма отзыва</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">HTML Academy</a>
+        </li>
+      </ul>
+      <button class="navigation__close">Закрыть</button>
+    </nav>
+    <div class="header__intro header__intro--short">
+      <img class="header__slogan header__slogan--short">
+    </div>
+  </header>
 
-  <p>Учебный проект - каталог</p>
+  <main class="main">
+    <h1 class="main__heading">Фото и видео</h1>
+    <p class="main__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике
+      и экономике.</p>
+    <section class="photos">
+      <h2 class="visually-hidden">Фотографии</h2>
+      <ul class="photos__list">
+        <li class="photos__item">
+          <h3 class="photos__title">Народные просторы</h3>
+          <img class="photos__image" src="https://www.placecage.com/280/280">
+          <p class="photos__author">Автор фото: Борис</p>
+          <button class="photos__likes-button">
+            <span class="photos__likes-number">1350</span>
+          </button>
+        </li>
+        <li class="photos__item">
+          <h3 class="photos__title">Местная растительность</h3>
+          <img class="photos__image" src="https://www.placecage.com/280/280">
+          <p class="photos__author">Автор фото: Сергей</p>
+          <button class="photos__likes-button">
+            <span class="photos__likes-number">143</span>
+          </button>
+        </li>
+        <li class="photos__item">
+          <h3 class="photos__title">Дорога на север</h3>
+          <img class="photos__image" src="https://www.placecage.com/280/280">
+          <p class="photos__author">Автор фото: Петр</p>
+          <button class="photos__likes-button">
+            <span class="photos__likes-number">96</span>
+          </button>
+        </li>
+        <li class="photos__item">
+          <h3 class="photos__title">Мост дьявола</h3>
+          <img class="photos__image" src="https://www.placecage.com/280/280">
+          <p class="photos__author">Автор фото: Антон</p>
+          <button class="photos__likes-button">
+            <span class="photos__likes-number">254</span>
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="video-presentation">
+      <h2 class="visually-hidden">Видеопрезентация</h2>
+      <p class="video-presentation__doubts">Все еще сомневаетесь?</p>
+      <p class="video-presentation__watch">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+        очередной раз!</p>
+      <video>
+        <!-- Тут надо стилизовать видео -->
+      </video>
+
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <a class="footer__tag" href="#">#visitsedona</a>
+    <ul class="footer__social">
+      <li class="footer__item">
+        <a>Твиттер</a>
+      </li>
+      <li class="footer__item">
+        <a>Фейсбук</a>
+      </li>
+      <li class="footer__item">
+        <a>Ютуб</a>
+      </li>
+    </ul>
+    <p class="footer__copyright">Разработано
+      <a href="#">лого академии</a>
+    </p>
+  </footer>
 
 </body>
 
