Добавила шрифты и основные блоки для стилизации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
       <h2 class="visually-hidden">Фотографии</h2>
       <ul class="photos__list">
         <li class="photos__item">
-          <h3 class="photos__title">Народные просторы</h3>
+          <h3 class="photos__title">Неродные просторы</h3>
           <img class="photos__image" src="https://www.placecage.com/280/280">
           <p class="photos__author">Автор фото: Борис</p>
           <button class="photos__likes-button">
