--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
 
   <main class="main">
     <h1 class="visually-hidden">Информация о городе Седона, штат Аризона</h1>
-    <p class="main__description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+    <p class="main__heading">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
       <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
