--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,42 +3,46 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Седона - каталог</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
 <body class="page__body">
-  <header class="header">
-    <a class="header__logo">
+  <header class="page-header">
+    <a class="page-header__logo">
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="header__navigation navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item">
-          <a class="navigation__link" href="index.html">Главная</a>
+    <nav class="page-header__main-nav main-nav">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="index.html">Главная</a>
         </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="catalog.html">Фото и видео</a>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="catalog.html">Фото и видео</a>
         </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="form.html">Форма отзыва</a>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="form.html">Форма отзыва</a>
         </li>
-        <li class="navigation__item">
-          <a class="navigation__link" href="#">HTML Academy</a>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">HTML Academy</a>
         </li>
       </ul>
-      <button class="navigation__close">Закрыть</button>
+      <button class="main-nav__toggle">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
     </nav>
-    <div class="header__intro header__intro--short">
-      <img class="header__slogan header__slogan--short">
+    <div class="page-header__intro page-header__intro--short">
+      <img class="page-header__slogan page-header__slogan--short">
     </div>
   </header>
 
-  <main class="main">
-    <h1 class="main__heading">Фото и видео</h1>
-    <p class="main__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике
+  <main class="page-main">
+    <h1 class="page-main__heading">Фото и видео</h1>
+    <p class="page-main__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+      политике
       и экономике.</p>
     <section class="photos">
       <h2 class="visually-hidden">Фотографии</h2>
