Сетка для главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,8 +34,8 @@
         <span class="visually-hidden">Закрыть</span>
       </button>
     </nav>
-    <div class="page-header__intro page-header__intro--short">
-      <img class="page-header__slogan page-header__slogan--short">
+    <div class="page-header__intro intro intro--short">
+      <img class="intro__slogan intro__slogan--short">
     </div>
   </header>
 
