--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="page-header__main-nav main-nav">
+    <nav class="page-header__main-nav main-nav main-nav--closed">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
@@ -34,8 +34,8 @@
         <span class="visually-hidden">Закрыть</span>
       </button>
     </nav>
-    <div class="page-header__intro">
-      <img class="page-header__slogan" src="https://www.placecage.com/282/214">
+    <div class="page-header__intro intro">
+      <img class="intro__slogan" src="https://www.placecage.com/282/214">
     </div>
   </header>
 
@@ -46,31 +46,43 @@
       <h2 class="visually-hidden">Преимущества</h2>
       <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <ol class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__title">Настоящий городок</h3>
-          <p class="advantages__number">№1</p>
-          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="advantages__photo" src="https://www.placecage.com/520/260"> <!-- Вставить фотку -->
+        <li class="advantages__item advantages__item--detailed">
+          <div class="advantages__item-wrapper">
+            <div class="advantages__text-wrapper">
+              <h3 class="advantages__title">Настоящий городок</h3>
+              <p class="advantages__number">№1</p>
+              <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <div class="advantages__image-wrapper">
+              <img class="advantages__photo" src="https://www.placecage.com/320/260"> <!-- Вставить фотку -->
+            </div>
+          </div>
           <ul class="advantages__services services">
-            <li class="services__item">
+            <li class="services__item services__item--housing">
               <h4 class="services__title">Жилье</h4>
               <p class="services__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
-            <li class="services__item">
+            <li class="services__item services__item--souvenirs">
               <h4 class="services__title">Сувениры</h4>
               <p class="services__description">Не только китайского, но и местного производства!</p>
             </li>
-            <li class="services__item">
+            <li class="services__item services__item--food">
               <h4 class="services__title">Еда</h4>
               <p class="services__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
           </ul>
         </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Там есть мост дьявола</h3>
-          <p class="advantages__number">№2</p>
-          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img src="https://www.placecage.com/520/260"> <!-- Вставить фотку -->
+        <li class="advantages__item advantages__item--detailed">
+          <div class="advantages__item-wrapper">
+            <div class="advantages__text-wrapper">
+              <h3 class="advantages__title">Там есть мост дьявола</h3>
+              <p class="advantages__number">№2</p>
+              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <div class="advantages__image-wrapper">
+              <img class="advantages__photo" src="https://www.placecage.com/320/260"> <!-- Вставить фотку -->
+            </div>
+          </div>
         </li>
         <li class="advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
@@ -89,7 +101,7 @@
         </li>
       </ol>
     </section>
-    <section class="hotel-search">
+    <section class="hotel-search container">
       <h2 class="visually-hidden">Поиск гостиницы</h2>
       <p class="hotel-search__question">Заинтересовались?</p>
       <p class="hotel-search__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
@@ -103,7 +115,7 @@
 
   <footer class="footer">
     <a class="footer__tag" href="#">#visitsedona</a>
-    <ul class="footer__social">
+    <ul class="footer__social social">
       <li class="footer__item">
         <a>Твиттер</a>
       </li>
