Сетка для страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="page-header__main-nav main-nav">
+    <nav class="page-header__main-nav main-nav main-nav--closed">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
@@ -35,7 +35,7 @@
       </button>
     </nav>
     <div class="page-header__intro intro intro--short">
-      <img class="intro__slogan intro__slogan--short">
+      <img class="intro__slogan intro__slogan--short" src="https://www.placecage.com/229/39">
     </div>
   </header>
 
@@ -47,37 +47,61 @@
     <section class="photos">
       <h2 class="visually-hidden">Фотографии</h2>
       <ul class="photos__list">
-        <li class="photos__item">
-          <h3 class="photos__title">Неродные просторы</h3>
-          <img class="photos__image" src="https://www.placecage.com/280/280">
-          <p class="photos__author">Автор фото: Борис</p>
-          <button class="photos__likes-button">
-            <span class="photos__likes-number">1350</span>
-          </button>
+        <li class="photos__item photos__item--top">
+          <div class="photos__image-wrapper">
+            <img class="photos__image" src="https://www.placecage.com/280/280">
+          </div>
+          <div class="photos__wrapper">
+            <div class="photos__text-wrapper">
+              <h3 class="photos__title">Неродные просторы</h3>
+              <p class="photos__author">Автор фото: Борис</p>
+            </div>
+            <button class="photos__likes-button">
+              <span class="photos__likes-number">1350</span>
+            </button>
+          </div>
         </li>
         <li class="photos__item">
-          <h3 class="photos__title">Местная растительность</h3>
-          <img class="photos__image" src="https://www.placecage.com/280/280">
-          <p class="photos__author">Автор фото: Сергей</p>
-          <button class="photos__likes-button">
-            <span class="photos__likes-number">143</span>
-          </button>
+          <div class="photos__image-wrapper">
+            <img class="photos__image" src="https://www.placecage.com/280/280">
+          </div>
+          <div class="photos__wrapper">
+            <div class="photos__text-wrapper">
+              <h3 class="photos__title">Местная растительность</h3>
+              <p class="photos__author">Автор фото: Сергей</p>
+            </div>
+            <button class="photos__likes-button">
+              <span class="photos__likes-number">143</span>
+            </button>
+          </div>
         </li>
         <li class="photos__item">
-          <h3 class="photos__title">Дорога на север</h3>
-          <img class="photos__image" src="https://www.placecage.com/280/280">
-          <p class="photos__author">Автор фото: Петр</p>
-          <button class="photos__likes-button">
-            <span class="photos__likes-number">96</span>
-          </button>
+          <div class="photos__image-wrapper">
+            <img class="photos__image" src="https://www.placecage.com/280/280">
+          </div>
+          <div class="photos__wrapper">
+            <div class="photos__text-wrapper">
+              <h3 class="photos__title">Дорога на север</h3>
+              <p class="photos__author">Автор фото: Петр</p>
+            </div>
+            <button class="photos__likes-button">
+              <span class="photos__likes-number">96</span>
+            </button>
+          </div>
         </li>
         <li class="photos__item">
-          <h3 class="photos__title">Мост дьявола</h3>
-          <img class="photos__image" src="https://www.placecage.com/280/280">
-          <p class="photos__author">Автор фото: Антон</p>
-          <button class="photos__likes-button">
-            <span class="photos__likes-number">254</span>
-          </button>
+          <div class="photos__image-wrapper">
+            <img class="photos__image" src="https://www.placecage.com/280/280">
+          </div>
+          <div class="photos__wrapper">
+            <div class="photos__text-wrapper">
+              <h3 class="photos__title">Мост дьявола</h3>
+              <p class="photos__author">Автор фото: Антон</p>
+            </div>
+            <button class="photos__likes-button">
+              <span class="photos__likes-number">254</span>
+            </button>
+          </div>
         </li>
       </ul>
     </section>
