Добавила скрипт открытия-закрытия меню на моб.версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="page-header__main-nav main-nav main-nav--closed">
+    <nav class="page-header__main-nav main-nav main-nav--nojs">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
@@ -135,7 +135,7 @@
       <a href="#">лого академии</a>
     </p>
   </footer>
-
+  <script src="js/script.js" type="module"></script>
 </body>
 
 </html>
