--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="page-header__main-nav main-nav main-nav--closed">
+    <nav class="page-header__main-nav main-nav main-nav--nojs">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
@@ -90,14 +90,17 @@
             <div class="review__wrapper review__wrapper--checkbox">
               <input class="review__checkbox visually-hidden" id="devils-bridge" type="checkbox" name="devils-bridge"
                 checked>
-              <label class="review__label-choice review__label-choice--checkbox" for="devils-bridge">Мост Дьявола</label>
+              <label class="review__label-choice review__label-choice--checkbox" for="devils-bridge">Мост
+                Дьявола</label>
               <input class="review__checkbox visually-hidden" id="bell-mountain" type="checkbox" name="bell-mountain"
                 checked>
-              <label class="review__label-choice review__label-choice--checkbox" for="bell-mountain">Гора-Колокол</label>
+              <label class="review__label-choice review__label-choice--checkbox"
+                for="bell-mountain">Гора-Колокол</label>
               <input class="review__checkbox visually-hidden" id="slide-park" type="checkbox" name="slide-park" checked>
               <label class="review__label-choice review__label-choice--checkbox" for="slide-park">Слайд-парк</label>
               <input class="review__checkbox visually-hidden" id="red-mountains" type="checkbox" name="red-mountains">
-              <label class="review__label-choice review__label-choice--checkbox" for="red-mountains">Красные скалы</label>
+              <label class="review__label-choice review__label-choice--checkbox" for="red-mountains">Красные
+                скалы</label>
             </div>
           </fieldset>
           <fieldset class="review__fieldset">
@@ -129,6 +132,7 @@
     </p>
   </footer>
 
+  <script src="js/script.js" type="module"></script>
 </body>
 
 </html>
