--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
       <!-- logo -->
       <img src="https://www.placecage.com/102/84">
     </a>
-    <nav class="page-header__main-nav main-nav main-nav--closed">
+    <nav class="page-header__main-nav main-nav main-nav--nojs">
       <ul class="main-nav__list">
         <li class="main-nav__item">
           <a class="main-nav__link" href="index.html">Главная</a>
@@ -133,6 +133,8 @@
   <!-- <section class="modal">
     <h2 class="modal__heading">Бизнес-тарифы</h2>
   </section> -->
+
+  <script src="js/script.js" type="module"></script>
 </body>
 
 </html>
